--- a/config/config.json
+++ b/config/config.json
@@ -1,14 +1,14 @@
 {
     "phidgets": {
         "phidget_1": {
-            "serial_number": 678328,
+            "serial_number": "678328",
             "active_channels": [
                 0,
                 1
             ]
         },
         "phidget_2": {
-            "serial_number": 678505,
+            "serial_number": "678328",
             "active_channels": [
                 0,
                 1
@@ -18,11 +18,11 @@
     "microphones": {
         "microphone_1": {
             "index": 0,
-            "serial_number": 0
+            "serial_number": "678328"
         },
         "microphone_2": {
             "index": 5,
-            "serial_number": 0
+            "serial_number": "678328"
         }
     },
     "speakers": {
@@ -38,11 +38,11 @@
     "webcams": {
         "webcam_1": {
             "index": 0,
-            "serial_number": 0
+            "serial_number": "678328"
         },
         "webcam_2": {
             "index": 2,
-            "serial_number": 0
+            "serial_number": "678328"
         }
     },
     "monitors": {
