--- a/config/config.json
+++ b/config/config.json
@@ -1,59 +1,65 @@
 {
-    "phidgets": {
-        "phidget_1": {
-            "serial_number": 678328,
-            "active_channels": [
-                0,
-                1
-            ]
-        },
-        "phidget_2": {
-            "serial_number": 678505,
-            "active_channels": [
-                0,
-                1
-            ]
-        }
-    },
-    "microphones": {
-        "microphone_1": {
-            "index": 0
-        },
-        "microphone_2": {
-            "index": 5
-        }
-    },
-    "speakers": {
-        "speaker_1": {
-            "index": 5
-        },
-        "speaker_2": {
-            "index": 8
-        }
-    },
-    "webcams": {
-        "webcam_1": {
-            "index": 0
-        },
-        "webcam_2": {
-            "index": 2
-        }
-    },
-    "monitors": {
-        "monitor_1": {
-            "index": 0
-        },
-        "monitor_2": {
-            "index": 1
-        }
-    },
-    "advanced_audio_properties": {
-        "sample_rate": 48000,
-        "audio_channels": 1,
-        "chunk_size": 2048,
-        "audio_delay": 1500
-    },
-    "advanced_video_properties": {
-        "video_delay": 0
-    }
+  "phidgets": {
+      "phidget_1": {
+          "serial_number": "678328",
+          "active_channels": [
+              0,
+              1
+          ]
+      },
+      "phidget_2": {
+          "serial_number": "678328",
+          "active_channels": [
+              0,
+              1
+          ]
+      }
+  },
+  "microphones": {
+      "microphone_1": {
+          "index": 0,
+          "serial_number": "678328"
+      },
+      "microphone_2": {
+          "index": 5,
+          "serial_number": "678328"
+      }
+  },
+  "speakers": {
+      "speaker_1": {
+          "index": 1,
+          "device_name": "KT Audio"
+      },
+      "speaker_2": {
+          "index": 3,
+          "device_name": "KT Audio"
+      }
+  },
+  "webcams": {
+      "webcam_1": {
+          "index": 0,
+          "serial_number": "678328"
+      },
+      "webcam_2": {
+          "index": 2,
+          "serial_number": "678328"
+      }
+  },
+  "monitors": {
+      "monitor_1": {
+          "index": 0
+      },
+      "monitor_2": {
+          "index": 1
+      }
+  },
+  "advanced_audio_properties": {
+      "sample_rate": 48000,
+      "audio_channels": 1,
+      "chunk_size": 2048,
+      "audio_delay": 1500
+  },
+  "advanced_video_properties": {
+      "video_delay": 0
+  }
 }
